more warnings and a couple typos